css/style.css
/* Reset */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
*, *:before, *:after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

/* Clearfix */
.clearfix:after {
    content: "";
    display: table;
    clear: both;
}
.hidden { display: none; }

/* Icons */
@font-face {
    font-family: 'icons';
        src: url('../fonts/icons.eot');
        src: url('../fonts/icons.eot#iefix') format('embedded-opentype'),
        url('../fonts/icons.woff') format('woff'),
        url('../fonts/icons.ttf') format('truetype'),
        url('../fonts/icons.svg#icons') format('svg');
    font-weight: normal;
    font-style: normal;
}

[class^="icon-"]:before, [class*=" icon-"]:before {
    font-family: "icons";
    font-style: normal;
    font-weight: normal;
    speak: none;
    display: inline-block;
    text-decoration: inherit;
    text-align: center;
    font-variant: normal;
    text-transform: none;
    line-height: 1em;
}
.symbol.email {
    font-size: 24px;
    margin-right: 5px;
    margin-bottom: 2px;
    line-height: 0;
    position: relative;
    top: 3px;
}
.icon-twitter:before { content: '\e801'; }


/* Spacing */
.post h1, h3, h4, h5, p, section > ul, section > ol, .post-body ul, #post-list li, pre {
    margin-bottom: 20px;
}

.post ul {
    padding-left: 1.4em;
}

.post ol {
    list-style-type: lower-roman;
}

.post-title {
    font-weight: 400 !important;
}

::-webkit-scrollbar {
    display: none;
}

body {
    font:16px/1 "Roboto Mono";
    font-weight: 300;
    background-color: #fcfcfc;
    color: #666;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    overflow-x: hidden;
}

h1 {
    font-size: 30px;
    letter-spacing: -1px;
    color: #222;
    font-weight: bold;
}

h2 {
    font: italic 19px/1.3em "Roboto Mono";
    color: #bbb;
}

.profile #wrapper {
    padding: 100px 40px 0px;
    max-width: 800px;
    margin: 0 auto;
}

.profile #header {
    border-bottom: 1px solid #eee;
    margin-bottom: 40px;
    padding-bottom: 40px;
    text-align: center;
    position: relative;
}

.profile #avatar {
    display: inline-block;
    width: 80px;
    height: 80px;
    border-radius: 5px;
    margin-bottom: 20px;
}

.profile h1 {
    font-weight: 400;
    letter-spacing: 0px;
    font-size: 20px;
    color: #222;
}

.profile h2 {
    font-size: 20px;
      font-weight: 300;
      color: #aaa;
      margin-top: 10px;
      font-style: normal;
      font-family: "Roboto Mono";
}

.main-nav .header-title {
    float: left;
}

.main-nav .nav-buttons {
    float: right;
}

nav.main-nav {
    padding: 10px 15px;
    background: #fff;
    background: rgba(255,255,255,.90);
    margin: 0 auto;
    display: inline-block;;
    width: 100%;
    z-index: 100;
    box-shadow: inset 0 -1px 0 #eee;
}

nav.main-nav a {
    display: inline-block;
    margin: 0 -6px;
    padding: 12px;
    font-size: 16px;
    line-height: 1.35;
    border-radius: 4px;
}

#wrapper {
  max-width: 800px;
  margin: 0 auto;
  padding: 60px 40px 40px 40px;
}

#wrapper.home {
    max-width: 800px;
    margin: 0 auto;
    padding: 0px 40px 20px 40px;
}

.home #avatar {
    float: right;
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

/* Typography */
/*Accent color*/
a,
#title,
#post-list a:hover,
#post-list li:hover .dates,
#title:hover {
    text-decoration: none;
    color: #5694f1;
}

/* p { text-align: justify; } */

p a { color: #5694f1; }

/*Transitions*/
a,
#post-nav a,
#post-list a    {
    -webkit-transition: color 0.15s ease, background-color 0.15s ease;
    -moz-transition: color 0.15s ease, background-color 0.15s ease;
    -ms-transition: color 0.15s ease, background-color 0.15s ease;
    -o-transition: color 0.15s ease, background-color 0.15s ease;
    transition: color 0.15s ease, background-color 0.15s ease;
}

ul li  { list-style-type:circle; }
li { list-style-position:inside; }

/* Line Height */
#post-body, p { line-height:1.7; }

b, strong { font-weight: 400;
  color: #1E2025; }
em, i { font-style: italic; }

#title {
    display: inline-block;
    line-height: 100%;
    font-weight: 700;
    font-size: 19px;
    margin: 0;
    padding-bottom: 20px;
}

.description {
    float: right;
    font: italic 14px/1.4em "Roboto Mono";
    color: #aaa;
}



.home h1 {
    font-size: 30px;
    letter-spacing: -1px;
    color: #222;
    font-weight: bold;
}

.home h2 {
    font: italic 19px/1.3em "Roboto Mono";
    color: #bbb;
}

.post header {
    text-align:center;

}

.post h1 {
    margin-bottom: 20px;
    color: #222;
    font: 300 32px/1.4em "Roboto Mono";
}

.post h2 {
    margin-top: 40px;
    margin-bottom: 20px;
      font: 300 24px/1.5 "Roboto Mono";
      color: #111;
}


.post h2.headline {
    /*font: italic 22px/1.3em Georgia,serif;*/
    font: normal 13px/1.5em "Roboto Mono";
    margin: -5px 0 40px 0;
    color: #b2b9be;
      font-size: 13px;
      text-transform: uppercase;
      letter-spacing: 2px;
      /*margin-top: 15px;*/
      display: inline-block;
}

#post-list h2 {
    font: normal 17px/1.5em "Roboto Mono";
    color: #aaa;
    /*max-width: 400px;*/
    margin-top: 2px;
}

h3, h4, h5 { color:#333; }

h3 { font-size:20px; font-weight: 400; }
h4 { font-size:16px; font-weight:bold; }
h5 { font-size:15px; font-weight: bold; }
/* ... */

